# provider-research-system

./: .gitignore  NEW_CHAT_START.md  PROJECT_CONTEXT.md  QUICK_REFERENCE.md  README.md  SESSION_HANDOFF.md  architecture-diagram.html
provider-research-skill/: .gitignore  ARCHITECTURE.md  DEVELOPMENT.md  DUPLICATE_ANALYSIS.md  FOLDER_HIERARCHY_PLAN.md  IMPLEMENTATION_SUMMARY.md  INTEGRITY_TEST_RESULTS.md  ORCHESTRATION.md  PROJECT_CONTEXT.md  QUICK_REFERENCE.md  README.md  SKILL.md  SKILL_LLM.md  TEST_CASES.md  TODO.md  __init__.py  add_home_instead_boston.py  delete_all_data.py  dev_import_home_instead_boston.py  display_detailed_home_instead.py  display_home_instead.py  display_providers.py  enrich_and_deduplicate.py  example_history_tracking.py  example_usage.py  example_web_scraping.py  provider_database_manager.py  provider_database_postgres.py  provider_orchestrator.py  provider_query_interpreter.py  provider_research_llm.py  provider_semantic_matcher.py  provider_web_researcher.py  pyproject.toml  requirements-dev.txt  requirements.txt  search_postgres.py  setup.py  setup_postgres_schema.py  structure_comparison.sh  (+3 more)
provider-research-skill/config/: .env.example
provider-research-skill/config/database/: postgres.example.yml  sqlite.example.yml
provider-research-skill/data/: .gitkeep  db_state.json
provider-research-skill/docs/: architecture-diagram.mermaid  changelog.md  getting-started.md  index.md
provider-research-skill/docs/architecture/: overview.md  project-structure.md  v2-multi-skill.md
provider-research-skill/docs/architecture/diagrams/: architecture-complete.mermaid
provider-research-skill/docs/guides/: database-setup.md  historical-data-search.md  url-tracking.md
provider-research-skill/examples/: README.md  advanced_orchestration.py  basic_usage.py  franchise_research_usage.py  home_instead_ma_quick_start.py
provider-research-skill/provider_research/: __init__.py  __version__.py  config.py  exceptions.py
provider-research-skill/provider_research/core/: __init__.py  franchise_researcher.py  orchestrator.py  query_interpreter.py  research_llm.py  semantic_matcher.py
provider-research-skill/provider_research/database/: __init__.py  manager.py  postgres.py  sqlite.py
provider-research-skill/provider_research/search/: __init__.py  provider_search.py  web_researcher.py
provider-research-skill/provider_research/utils/: __init__.py  formatters.py  logger.py  validators.py
provider-research-skill/scripts/: db_state.py  init_database.sh  setup_postgres.sh
provider-research-skill/tests/: __init__.py  conftest.py  test_file_and_import_integrity.py  test_validation.py
provider-research-skill/tests/fixtures/: __init__.py
provider-research-skill/tests/integration/: __init__.py
provider-research-skill/tools/: __init__.py  import_to_postgres.py
provider-research-skill/tools/data/: enrich_and_deduplicate.py
provider-research-skill/tools/database/: setup_postgres_schema.py
